# fies

./: .gitignore  CONTRIBUTING  COPYING  COPYING-BSD3C  Doxyfile  Makefile  Protocol.txt  README.md  TODO  common.mak  configure  meson.build  meson_options.txt  shlib.configure.sh
debian/: changelog  control  fies-rbd.install  fies-zvol.install  fies.install  libfies-dev.install  libfies0.install  rules
doc/: Makefile  Sections.pm  fies-dmthin.options  fies-dmthin.rst.in  fies-rbd.options  fies-rbd.rst.in  fies-restore.options  fies-restore.rst.in  fies-zvol.options  fies-zvol.rst.in  fies.options  fies.rst.in  meson.build  section.pl
include/: Makefile  fies.h  meson.build
include/fies/: dmthin.h
lib/: Makefile  emap.c  emap.h  fies.h  fies.pc.in  fies_linux.h  fies_reader.c  fies_reader.h  fies_writer.c  fies_writer.h  linux_file.c  map.c  map.h  meson.build  util.c  util.h  vector.c  vector.h
libfies-dmthin/: crc.c  crc.h  dmthin.c  dmthin.h  fies-dmthin.pc.in  main.c  main.h  meson.build
scripts/: checkpatch.sh  style-check.pl
src/: Makefile  cli_common.c  cli_common.h  fies.c  fies_cli.h  fies_create.c  fies_extract.c  fies_regex.h  filematch.c  filematch.h  meson.build  regex.c  util.c  util.h  warnlist.h
src/fies-dmthin/: Makefile  dmthin_meta.c  fies_dmthin.c  fies_dmthin.h  meson.build
src/fies-rbd/: Makefile  fies_rbd.c  meson.build
src/fies-restore/: Makefile  fies_restore.c  meson.build
src/fies-zvol/: Makefile  fies_zvol.c  meson.build
tests/: Makefile  checkfile.cc  checkfile.h  cppfile.cc  cppfile.h  cppreader.cc  cppreader.h  cppwriter.cc  cppwriter.h  extents.h  memreader.cc  memreader.h  memwriter.cc  memwriter.h  meson.build  t1.cc  t2.c  test.h  test_common.cc  testfile.cc  testfile.h  util.h
